# Pegasus

./: .gitignore  .gitmodules  .pullapprove.yml  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.md  README.md  appveyor.yml  travisBuildScript.sh
Pegasus/: CMakeLists.txt  PegasusPhysicsConfig.cmake.in  PegasusVersionInfo.rc.in
Pegasus/cmake/: EigenConfig.cmake  GlmConfig.cmake
Pegasus/include/: BoundingVolumes.hpp  Geometry.hpp  Math.hpp  ParticleContacts.hpp  ParticleForceGenerator.hpp  ParticleLinks.hpp  ParticleWorld.hpp  boundingvolumes.hpp  core.hpp  geometry.hpp  math.hpp  mechanics.hpp  particle.hpp  particlecontacts.hpp  particleforcegenerator.hpp  particlelinks.hpp  particleworld.hpp
Pegasus/include/geometry/: BoundingVolume.hpp  ConfigurationSpaceObject.hpp  ExpandingPolytopeAlgorithm.hpp  Geometry.hpp  GilbertJohnsonKeerthi.hpp  Intersection.hpp  Shape.hpp  SimpleShapeIntersectionDetector.hpp
Pegasus/include/math/: FloatingPoint.hpp  HalfEdgeDataStructure.hpp  HyperPlane.hpp  JacobiEigenvalue.hpp  Math.hpp  QuickhullConvexHull.hpp
Pegasus/include/pegasus/: Asset.hpp  AssetManager.hpp  Body.hpp  BoundingVolumes.hpp  Collision.hpp  CollisionDetector.hpp  CollisionResolver.hpp  Contact.hpp  Debug.hpp  Force.hpp  Geometry.hpp  Integration.hpp  Material.hpp  Math.hpp  Mechanics.hpp  Object.hpp  Particle.hpp  ParticleContacts.hpp  ParticleForceGenerator.hpp  ParticleLinks.hpp  ParticleWorld.hpp  Primitives.hpp  Scene.hpp  SharedMacros.hpp
Pegasus/include/pegasus/debug/: DebugDummy.hpp  DebugImplementation.hpp
Pegasus/sources/: Asset.cpp  AssetManager.cpp  Body.cpp  BoundingVolumes.cpp  Collision.cpp  DebugDummy.cpp  DebugImplementation.cpp  Force.cpp  Geometry.cpp  Integration.cpp  Material.cpp  Math.cpp  Mechanics.cpp  Object.cpp  Particle.cpp  ParticleContacts.cpp  ParticleForceGenerator.cpp  ParticleLinks.cpp  ParticleWorld.cpp  Primitives.cpp  Scene.cpp  boundingvolumes.cpp  core.cpp  geometry.cpp  math.cpp  mechanics.cpp  particle.cpp  particlecontacts.cpp  particleforcegenerator.cpp  particlelinks.cpp  particleworld.cpp
Pegasus/sources/geometry/: BoundingVolume.cpp  ConfigurationSpaceObject.cpp  Geometry.cpp  GilbertJohnsonKeerthi.cpp  Intersection.cpp  Shape.cpp  SimpleShapeIntersectionDetector.cpp
Pegasus/sources/math/: HalfEdgeDataStructure.cpp  HyperPlane.cpp  JacobiEigenvalue.cpp  Math.cpp
cmake/: GlbindingConfig.cmake  GlfwConfig.cmake  GlutConfig.cmake  ImguiConfig.cmake  PegasusBuildFlags.cmake  PegasusConfig.cmake
demo/: Application.cpp  Application.hpp  Bunny.hpp  CMakeLists.txt  Demo.cpp  Demo.hpp  Falling.cpp  Gl.hpp  GlutConfig.cmake  Main.cpp  OglHeaders.hpp  Render.cpp  Render.hpp  Renderer.cpp  Renderer.hpp  Timing.hpp  app.cpp  app.hpp  ballistic.cpp  blob.cpp  falling.cpp  gl.hpp  main.cpp  ogl_headers.hpp  random.cpp  random.hpp  timing.cpp  timing.hpp
demo/dependencies/: CMakeLists.txt
demo/dependencies/imgui/: imgui_impl_glfw_gl3.cpp
demo/dependencies/imgui/GL/: gl3w.h
demo/imgui/: CMakeLists.txt
include/: core.hpp  geometry.hpp  math.hpp  mechanics.hpp  obb.hpp  obbtree.hpp  particle.hpp  particlecontacts.hpp  particleforcegenerator.hpp  particlelinks.hpp  particleworld.hpp
other/: pre-commit
src/: core.cpp  geometry.cpp  math.cpp  obb.cpp  obbtree.cpp  particle.cpp  particlecontacts.cpp  particleforcegenerator.cpp  particlelinks.cpp  particleworld.cpp
test/: CMakeLists.txt  CollisionTest.cpp  IntegrationTest.cpp
